# TFG

./: README.md
Matlab/: Posicion.m
Matlab/Altura/: Altura.m  todo.bag
Matlab/Altura/No_usado/: Altura.m  todo.bag
Matlab/Aterrizaje_basico/brusco/: Corners.m  Posicion.m  Velocidad.m  brusco2.bag  brusco3.bag  todo.bag
Matlab/Aterrizaje_basico/suave/: Corners.m  Posicion.m  Velocidad.m  suave1.bag  suave2.bag  suave3.bag  suave4.bag  suave6.bag  todo.bag
Matlab/Aterrizaje_peso/: medio1.bag
Matlab/Aterrizaje_peso/Brusco/: Corners.m  Posicion.m  Velocidad.m  brusco1.bag
Matlab/Aterrizaje_peso/Suave/: Corners.m  Posicion.m  Velocidad.m  suave1.bag
Matlab/Aterrizaje_plataform/: Rapido1(0.5).bag  rapido_fallido.bag
Matlab/Aterrizaje_plataform/Lento/: Corners.m  Posicion.m  Velocidad.m  lento1.bag  lento_bueno.bag  lento_justo.bag  lento_malo.bag
Matlab/Aterrizaje_plataform/Rapido/: Corners.m  Posicion.m  Rapido_noseguimiento_juja.bag  Rapido_nosguimiento_bueh.bag  Velocidad.m  todo.bag
Matlab/Aterrizaje_viento/Flojo/: Corners.m  Posicion.m  Velocidad.m  flojete(bueno).bag  flojo2.bag  todo.bag
Matlab/Aterrizaje_viento/Fuerte/: Corners.m  Posicion.m  Velocidad.m  fuertechustas.bag  todo.bag
Matlab/Prueba/: Corners.m  corners.bag  posicion.bag  velocidad.bag
Proyectos/teleoperation_pixhawk_simulation/: application.repos  df_main_launcher.sh  launch_gazebo.sh  pid_main_launcher.sh  stop.sh
Proyectos/teleoperation_pixhawk_simulation/configs/drone1/: quadrotor_pid_controller_config_new.yaml
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/aruco/: aruco.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/aruco_gate_1/: model.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/aruco_gate_2/: model.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/aruco_gate_3/: model.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/aruco_gate_4/: model.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/aruco_gate_5/: model.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/box_target/: model.config  model.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/iris_cam/: iris_cam.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/jungle_gym/: model.config  model.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/jungle_gym/meshes/: background.stl  junglegymgrey.stl  junglegymorange.stl
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/models/unit_box/: model.sdf
Proyectos/teleoperation_pixhawk_simulation/configs/gazebo/worlds/: aaa.world  aaa_old.world  bbb_old.world  empty.world
Proyectos/teleoperation_pixhawk_simulation/configs/mission/: behavior_catalog.yaml  mission.py  mission_old.py
Proyectos/teleoperation_pixhawk_simulation/configs/mission_df/: behavior_catalog.yaml  mission.py  mission_old.py
ROS/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ROS/catkin_ws/devel/lib/Plantillas_nodos/: Plantillas_nodos_test_mainP  Plantillas_nodos_test_mainS
ROS/catkin_ws/devel/lib/pkgconfig/: Detector_esquinas.pc  Plantillas_nodos.pc
ROS/catkin_ws/devel/share/Detector_esquinas/cmake/: Detector_esquinasConfig.cmake
ROS/catkin_ws/devel/share/Plantillas_nodos/cmake/: Plantillas_nodosConfig.cmake
ROS/catkin_ws/src/Detector_esquinas/: CMakeLists.txt
ROS/catkin_ws/src/Detector_esquinas/src/: Detector.cpp  ibvs_luis.cpp  ibvs_luis_plataf.cpp  model_push.cc  viento.cc
ROS/catkin_ws/src/Detector_esquinas/src/Detector/Filtro color y esquinas/: Independiente.cpp
ROS/catkin_ws/src/Detector_esquinas/src/Detector/Programa_independiente/: Color_H_encuadre_externo.cpp  Detector_color.cpp  Detector_color_Dil.cpp  Detector_filtromax.cpp  Detector_filtromin.cpp  Filtro_vértices_encuadre(BUENO).cpp  Funcion_Harris_mala.cpp
ROS/catkin_ws/src/Detector_esquinas/src/Detector/Programas Gazebo/: Detector_filrado_max(NO).cpp  Detector_sin_filtrado.cpp
ROS/catkin_ws/src/Detector_esquinas/src/Detector/Programas definitivos/: Detector_pruebas.cpp  Rectángulo.cpp  Rectángulo_subscribercorners.cpp
ROS/catkin_ws/src/Detector_esquinas/src/ibvs_luis/: ibvs_nuevo(falla float32).cpp  ibvs_sub_pub(SI).cpp  ibvs_subscriber.cpp
ROS/catkin_ws/src/Detector_esquinas/src/Últimos/: Detector_v3.cpp  Detector_v4.cpp  Detector_v5.cpp  ibvs_luis_v1.cpp  ibvs_luis_v2.cpp  ibvs_luis_v3.cpp  ibvs_luis_v4.cpp  ibvs_luis_v5.cpp
ROS/catkin_ws/src/Plantillas_nodos/: CMakeLists.txt
ROS/catkin_ws/src/Plantillas_nodos/src/: 1Publisher.cpp  1Subscriber.cpp
ROS/teleoperation_gazebo(no se usa)/: launcher_gazebo.sh  project_modules.txt
mundos (Gazebo)/: aaa.world  env_mav.launch
src (ROS)/Plantillas_nodos/: CMakeLists.txt  DUDAS.txt  package.xml
src (ROS)/Plantillas_nodos/Nodos/: 1Publisher.cpp  1Subscriber.cpp
src (ROS)/teleoperation_gazebo/: launcher_gazebo.sh  main_launcher.sh
